testament/tests/shouldfail/toutput.nim
discard """
output: '''
done
'''
target: c
"""

echo "broken"
